# logless

./: README.md  pyproject.toml  setup.py
.github/workflows/: cicd.yml
logless/: .pylintrc  __init__.py  main.py
tests/: test_basic.py
